tests/NormalTests/paczka1/fuzzy1/82945335.err
Error in line 5: Vsgm S624 10,35
Error in line 2: Vsgm A385 52,6
Error in line 10: Vsgm S624 4,7
Error in line 29: 91SUkgCy A385 -2,7
Error in line 35: A416 S771 91,0
Error in line 38: A416 S624 54,5
Error in line 39: A416 A385 14,9
